test/invalid-semantics/58196_wildcard_in_expr/wildcard_in_expr.mag
-- Author: 58196, Pedro Lopes

-- No wildcard should be present in arithmetic expression

fun double (n) : Int -> Int = n * _

fun main (_) : Unit -> Unit = print(double(5))
